Single layout show date rage if supplied, fix figcaption right alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,7 +147,7 @@ figure {
     }
 
     &.right {
-      text-align: left;
+      text-align: right;
     }
   }
 }
